# openapi_lib_generator

./: .gitignore  Cargo.toml  Makefile.toml  README.md  rustfmt.toml
src/: cli.rs  fs.rs  generate.rs  lib.rs  main.rs  testing.rs
src/generate/: cargos.rs  crate_scaffolds.rs  makefiles.rs  parameters.rs  readmes.rs  utils.rs  yamls.rs
src/testing/: petstore.yaml
